Ref #791. Fixed a global collapsing css which caused animation bug.

--- a/refinery/ui/source/styles/refinery-style.less
+++ b/refinery/ui/source/styles/refinery-style.less
@@ -155,7 +155,7 @@ select.select-height {
   border: none;
 }
 
-.collapsing {
+.navbar-collapse.collapsing#navbarMain {
 overflow: visible;
 border: none;
 }
